   and Matthew Paul Thomas!
 * report.py: Fix crash on determination of Python module path when examining a
   crash of "python -m ...".
 * apport-kde: Fix crash with undefined QString under Python 3. Thanks Jonathan
   Riddell! (LP: #1028984)
 * launchpad.py: Add missing "Pre-release Freeze" status. Thanks Brian Murray!

2.5.1 (2012-08-22):
-------------------
 * data/root_info_wrapper: Turn into a real file, a symlink can cause some
   packaging problems.

2.5 (2012-08-22):
-------------------
Bug fixes:
 * test_recoverable_problem.py: Fix test for calling test runner with absolute
   path.
 * packaging-apt-dpkg.py: Fix crash on writing virtual_mapping.db when running
   with --sandbox-dir and -S system or giving no --cache.
 * REThread.py: Fix re-raising of exceptions in Python 3. Thanks Martin
   Packman! (LP: #1024836)
 * apport-retrace: Keep compressed CoreDump from .crash files instead of
   uncompressing them into memory. This dramatically reduces memory usage.
   (LP: #981155)

Improvements:
 * Add an apport.memdbg() function which prints out current memory usage if
   APPORT_MEMDEBUG is set. Annotate apport-retrace with it.
 * hookutils.py: Allow specifying a list of profile names when using
   attach_mac_events(). Thanks Marc Deslauriers.
 * hookutils.py, attach_root_command_outputs() and root_command_output(): Drop
   usage of sudo, kdesudo, and gksu, and replace with pkexec. For
   attach_root_command_outputs(), use a wrapper and proper .policy file which
   explains the action and works under every environment; thus
   attach_root_command_outputs() is preferred over root_command_output() now,
   as it provides a better user experience.
 * Package hooks which want to send the report to a different crash database
   than "default" can now also give the database specification itself in the
   "CrashDB" field, not just the DB name. With this, packages do not need to
   ship a separate /etc/apport/crashdb.conf.d/ file. Please see